force-app/main/default/objects/BOT_Pharmacy_Service__c/BOT_Pharmacy_Service__c.object-meta.xml
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is Used to store the pharmacy services records and having a lookup relationship with Account.</description>
    <label>Pharmacy Service</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharmacy Services</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>