force-app/main/default/objects/BOT_Pharmacy_Service__c/fields/BOT_Account__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to Account. SFDC Account ID will be populated here.</description>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pharmacy Services</relationshipLabel>
    <relationshipName>Pharmacy_Services</relationshipName>
    <type>Lookup</type>
</CustomField>