force-app/main/default/objects/BOT_Pharmacy_Service__c/fields/BOT_Channel__c.field-meta.xml
<CustomField>
    <fullName>BOT_Channel__c</fullName>
    <description>To store the Channel like Commercial, Employer, Tricare etc.</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>