force-app/main/default/objects/BOT_Pharmacy_Service__c/fields/BOT_PBM_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_PBM_ID__c</fullName>
    <description>To store the BOT PBM ID. It is used for BOT internal reference.</description>
    <label>PBM_ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>