force-app/main/default/objects/BOT_Pharmacy_Service__c/fields/BOT_PBM_Name__c.field-meta.xml
<CustomField>
    <fullName>BOT_PBM_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to Account. SFDC PBM Account ID will be populated here.</description>
    <label>PBM Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pharmacy Services</relationshipLabel>
    <relationshipName>Pharmacy_Services_PBM</relationshipName>
    <type>Lookup</type>
</CustomField>