force-app/main/default/objects/BOT_Pharmacy_Service__c/fields/BOT_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>BOT_Provider_Name__c</fullName>
    <description>To store other provider name</description>
    <label>Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>