force-app/main/default/objects/BOT_Pharmacy_Service__c/fields/BOT_SubChannel__c.field-meta.xml
<CustomField>
    <fullName>BOT_SubChannel__c</fullName>
    <description>To store the Sub Channel like Medicare, MA-PD, Employer etc.</description>
    <label>SubChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>